# Manilyzer

./: .gitignore  CMakeLists.txt  README.md  build_exe.sh  build_xcode.sh
build_exe/: CMakeCache.txt  Makefile  Manilyzer  cmake_install.cmake
build_xcode/: CMakeCache.txt  cmake_install.cmake
build_xcode/Debug/: Manilyzer
build_xcode/Manilyzer.build/Debug/ALL_BUILD.build/: Script-BAD5563516920756880C290F.sh
build_xcode/Manilyzer.xcodeproj/: project.pbxproj
build_xcode/Manilyzer.xcodeproj/project.xcworkspace/xcuserdata/vincirist.xcuserdatad/: UserInterfaceState.xcuserstate
build_xcode/Manilyzer.xcodeproj/xcuserdata/vincirist.xcuserdatad/xcschemes/: xcschememanagement.plist
code/: main.cpp
code/arc/: Arc.hpp
code/arc/src/: Arc.cpp
code/test/: test.hpp  test_utils.hpp
code/test/src/: test_Arc.cpp  test_Interval.cpp  test_Transform.cpp  test_utils.cpp
code/utils/: Interval.hpp  Jsonable.hpp  Transform.hpp  Vec2.hpp  macros.hpp
code/utils/src/: Intervall.cpp  Transform.cpp  Vec2.cpp
